--- a/Latex Nichtlineare Zustandsbeobachtung/cover.tex
+++ b/Latex Nichtlineare Zustandsbeobachtung/cover.tex
@@ -19,7 +19,7 @@
 \end{spacing}
 \begin{spacing}{1}
 \begin{tabular}{l}
- \Large{Studienarbeit M-Monat/Jahr-Nummer}
+ \Large{Studienarbeit S-03/17-608}
 \end{tabular}
 
 \vspace{5mm}
@@ -44,7 +44,7 @@ Erstprüfer  & Prof. Dr.-Ing. T. Ortmaier\\
 Betreuer    & M. Sc. Steffen Bosselmann\\
 \end{tabular}
 }
-
+\afterpage{\blankpage}
 \end{spacing}
 \end{titlepage}
 
@@ -66,5 +66,5 @@ habe.
 
 \vspace{25mm}
 
-\noindent Hannover, Tag. Monat Jahr
+\noindent Hannover, 28. März 2017
 \newpage
