--- a/Latex Nichtlineare Zustandsbeobachtung/einleitung.tex
+++ b/Latex Nichtlineare Zustandsbeobachtung/einleitung.tex
@@ -1,5 +1,9 @@
 \chapter{Einleitung}
+\label{ch:einleitung}
 
-Die Abkürzung etc.\nomenclature{etc.}{et cetera} steht im Abkürzungsverzeichnis. 
 
-%\abbildung[width=60 mm]{htb}{PR2-1}{Beispiel für ein einzelnes Bild}
+In der Regelungstechnik gewinnen Zustandsrückführungen immer mehr an Bedeutung. Zum einen ist durch die Zustandsrückführung eine Auslegung der dynamischen Eigenschaften des Regelkreises möglich. Instabile Systeme wie das Doppelpendel können so durch die Manipulation der Eigenwerte des geschlossenen Regelkreises stabilisiert werden. Zum anderen genügen bei der Zustandsrückführung proportional wirkende Regler, wodurch die Umsetzung des Reglergesetzes durch einfach Additionen und Multiplikation vollzogen werden kann, vgl. \cite{Lunze2010}. Für die Anwendung einer Zustandsrückführung müssen jedoch alle Zustände vorhanden sein. In vielen Fällen sind nicht alle Systemzustände aufgrund fehlender Sensorik oder finanziellem Mehraufwand messbar. Wenn die Voraussetzungen der Beobachtbarkeit eines Systems erfüllt sind, können Zustandsbeobachter nicht messbare Größen rekonstruieren. \\\\
+%
+Zu Demonstrations- und Forschungszwecken wurde am \textit{Institut für Mechatronische Systeme }ein inverses Pendel auf einem verfahrbaren Wagen aufgebaut. Im Rahmen dieser Studienarbeit wird das inverse Pendel mit einem zweiten Stabs zum Doppelpendel erweitert. Während der innere Pendelwinkel gemessen wird, verfügt das äußere Pendel über keine Sensorik zur Lagebestimmung. Es ist mithilfe von Zustandsbeobachtern trotzdem möglich, den äußeren Pendelwinkel zu schätzen. Beobachter rekonstruieren Systemzustände unter Verwendung des zugrundeliegenden mathematischen Modells. Die nichtlineare Beobachtung der Zustände des inversen Doppelpendels ist Gegenstand dieser Arbeit. \\\\
+%
+Die Studienarbeit ist wie folgt gegliedert. Zuerst werden die dynamischen Bewegungsgleichungen des inversen Doppelpendels hergeleitet. Als nächstes wird die Zustandsregelung des Doppelpendels, welche als Motivation für die Zustandsbeobachtung dient, in der oberen, stabilen Gleichgewichtslage simuliert. In Kapitel~\ref{ch:zustandsbeobachtung} wird die Systemeigenschaft der Beobachtbarkeit untersucht, um anschließend die Implementierung eines nichtlinearen Beobachterkonzepts für das inverse Doppelpendel vorzunehmen. Im Rahmen dieser Arbeit wird das Erweiterte Kalmanfilter als Zustandsbeobachter verwendet. Die Winkelschätzung der Pendelstäbe wird nach einer Erläuterung der bildbasierten Winkelbestimmung am realen Versuchsstand validiert und die Ergebnisse werden diskutiert. 
