--- a/Latex Nichtlineare Zustandsbeobachtung/zustandsregelung.tex
+++ b/Latex Nichtlineare Zustandsbeobachtung/zustandsregelung.tex
@@ -1,12 +1,12 @@
 \chapter{Zustandsregelung des inversen Doppelpendels}
 \label{ch:zustandsregelung}
 
-In diesem Kapitel wird zuerst die Zustandsraumdarstellung des inversen Doppelpendels hergeleitet. Im Anschluss wird die grundlegende Systemeigenschaft der Steuerbarkeit erläutert und für das vorliegende System nachgewiesen. Zuletzt wird das Doppelpendel mittels einer optimalen Zustandsregelung in der oberen, instabilen Gleichgewichtslage stabilisiert. Die Simulationsergebnisse werden dargestellt und diskutiert. 
+In diesem Kapitel wird zuerst die Zustandsraumdarstellung des inversen Doppelpendels hergeleitet. Im Anschluss erfolgt die Untersuchung der grundlegenden Systemeigenschaft der Steuerbarkeit für das vorliegende, lineare System. Zuletzt wird das Doppelpendel mittels einer optimalen Zustandsregelung in der oberen, instabilen Gleichgewichtslage stabilisiert. Die Simulationsergebnisse werden dargestellt und diskutiert. 
 
 \section{Zustandsraumdarstellung}
 \label{sec:zustandsraumdarstellung}
 
-Die Herleitung der Zustandsraumdarstellung ist Gegenstand dieses Abschnitts. Die Vorteile einer Analyse eines Systems im Zustandsraum ist die gute Interpretierbarkeit der untersuchten physikalischen Zustände und eine einfache rechnergestützte Simulation~\cite{Lunze2010}. Der Signalflussplan des Zustandsraums mit den wesentlichen Größen kann Bild~\ref{fig:zustandsraum} entnommen werden. Es wird darauf hingewiesen, dass die Zeitabängigkeit der Zustände und der Eingangsgröße wieder dargestellt wird. Das Ziel ist es, die in Kapitel~\ref{ch:modellbildung} hergeleiteten, nichtlinearen Bewegungsgleichungen durch eine Linearisierung im Zustandsraum eines Mehrgrößensystems
+Die Herleitung der Zustandsraumdarstellung ist Gegenstand dieses Abschnitts. Die Vorteile einer Analyse eines Systems im Zustandsraum ist die gute Interpretierbarkeit der untersuchten physikalischen Zustände und eine einfache rechnergestützte Simulation~\cite{Lunze2010}. Der Signalflussplan des Zustandsraums mit den wesentlichen Größen kann Bild~\ref{fig:zustandsraum} entnommen werden. Es wird darauf hingewiesen, dass die Zeitabängigkeit der Systemzustände und der Eingangsgröße wieder dargestellt wird. Das Ziel ist es, die in Kapitel~\ref{ch:modellbildung} hergeleiteten, nichtlinearen Bewegungsgleichungen durch eine Linearisierung in den Zustandsraum eines Mehrgrößensystems
 %
 \begin{align}
 \bm{\dot{x}}(t)  &=  \bm{A x}(t) + \bm{b}  u(t),  \text{ mit } \bm{x}(0) = \bm{x}_0,\label{eq:zustandsgleichung}\\
@@ -34,7 +34,7 @@ Die Herleitung der Zustandsraumdarstellung ist Gegenstand dieses Abschnitts. Die
 		\draw[vecArrow] (x0) to node [right,pos = 0.1] {$\bm{x}_0$} (int);
 		\draw[vecArrow] (c) to node [above] {$ \bm{y}(t) $} (y);
 		\draw[vecArrow] (a) -| (b-int);
-		\draw[vecArrow] (b-int) to node [above] {$ \bm{\dot{x}(t) } $} (int);
+		\draw[vecArrow] (b-int) to node [above] {$ \bm{\dot{x}}(t) $} (int);
 		\draw[vecArrow] (b) to (b-int);
 		\draw[->] (u) to node [above] {$ u(t) $} (b);
 		
@@ -54,7 +54,7 @@ Die Herleitung der Zustandsraumdarstellung ist Gegenstand dieses Abschnitts. Die
 	\label{fig:zustandsraum}
 \end{figure}
 
-mit einer Eingangsgröße und mehreren Ausgängen darzustellen. Die hier dargestellte Zustandsraumdarstellung entspricht nicht der allgemeinen Form, sondern ist bereits an das untersuchte inverse Doppelpendel mit verfahrbarem Wagen angepasst. Da das System nicht sprungfähig ist, wird der Durchgangsanteil $ \bm{D} = \bm{0}$ in den obigen Gleichungen nicht aufgeführt. Im vorliegenden gelten für die einzelnen Variablen die Bezeichnungen und Dimensionen:
+mit einer Eingangsgröße und mehreren Ausgängen zu überführen. Da das System nicht sprungfähig ist, wird der Durchgangsanteil $ \bm{D} = \bm{0}$ in den obigen Gleichungen nicht aufgeführt. Für die einzelnen Variablen gelten die folgenden Bezeichnungen und Dimensionen:
 
 
 \begin{center}
@@ -78,20 +78,20 @@ Für das Aufstellen des Systems ist zunächst eine geeignete Wahl des Zustandsvekt
 \label{eq:arbeitspunkt}
 \end{align}
 
-Die Zustandsgleichung~\eqref{eq:zustandsgleichung} beinhaltet die Zustände $ \bm{x} $ und deren zeitlichen Ableitungen $ \bm{\dot{x}} $. Ausgehend vom Startpunkt $ t = 0 $ und den Startwerten $ \bm{x}(0) = \bm{x}_0 $ wird das dynamische, zeitinvariante Verhalten des Systems beschrieben und modelliert. Die obigen Gleichungen stellen ein bereits linearisiertes System dar. Für die Wahl der Ausgangsgrößen eignen sich die messbaren Größen des mechatronischen Systems. Diese sind die Wagenposition $ x(t) $ und der innere Pendelwinkel $ \varphi_1(t) $, welche in~\eqref{eq:ausgangsgleichung} gebildet werden. Die hergeleiteten Bewegungsgleichungen liegen in nichtlinearer Form vor. Mithilfe einer Taylor-Approximation 1. Ordnung
+Die Zustandsgleichung~\eqref{eq:zustandsgleichung} beinhaltet die Zustände $ \bm{x} $ und deren zeitlichen Ableitungen $ \bm{\dot{x}} $. Ausgehend vom Startpunkt $ t = 0 $ und den Startwerten $ \bm{x}(0) = \bm{x}_0 $ wird das dynamische, zeitinvariante Verhalten des Systems beschrieben und modelliert. Die obigen Gleichungen stellen ein bereits linearisiertes System dar. Die hergeleiteten Bewegungsgleichungen liegen in nichtlinearer Form vor. Mithilfe einer Taylor-Approximation 1. Ordnung
 %
 \begin{align}
 	T_{(1,(\bm{x}_\mathrm{AP},u_0))} (\bm{x}(t), u(t)) = 
-	f(\bm{x}_\mathrm{AP}, u_0) 
-	&+ \frac{\partial f}{\partial \bm{x}(t)}  \bigg|_{(\bm{x}_\mathrm{AP}, u_0)} (\bm{x}(t) - \bm{x}_\mathrm{AP}) \nonumber \\
-	&+ \frac{\partial f}{\partial u(t)}\bigg|_{(\bm{x}_\mathrm{AP}, u_0)}	(u(t)-u_0)
+	f(\bm{x}_\mathrm{AP}, u_{\mathrm{AP}}) 
+	&+ \frac{\partial f}{\partial \bm{x}(t)}  \bigg|_{(\bm{x}_\mathrm{AP}, u_{\mathrm{AP}})} (\bm{x}(t) - \bm{x}_\mathrm{AP}) \nonumber \\
+	&+ \frac{\partial f}{\partial u(t)}\bigg|_{(\bm{x}_\mathrm{AP}, u_{\mathrm{AP}})}	(u(t)-u_{\mathrm{AP}})
 \label{eq:taylor}
 \end{align}  
 
-werden nichtlineare Funktionen durch Abbruch der Taylor-Reihe nach dem 1. Glied angenähert. Das Ergebnis ist eine lineare Approximation des nichtlinearen Verhaltens in der Nähe des Arbeitspunkts. Für die Regelung des inversen Doppelpendels um die obere, instabile Gleichgewichtslage ergibt sich der Arbeitspunkt 
+werden nichtlineare Funktionen durch Abbruch der Taylor-Reihe nach dem 1. Glied angenähert. Das Ergebnis ist eine lineare Approximation des nichtlinearen Verhaltens des Systems in der Nähe des Arbeitspunkts. Für die Regelung des inversen Doppelpendels um die obere, instabile Gleichgewichtslage ergibt sich der Arbeitspunkt 
 %
 \begin{align*}
-\bm{x}_\mathrm{AP} = \Big[x_0 = 0, \dot{x}_0 = 0, \varphi_1 = 0, \dot{\varphi}_1 = 0, \varphi_2 = 0,\dot{\varphi}_2 = 0 \Big]^\mathrm{T} \hspace{0.1cm} \text{ und } \hspace{0.1cm} u_0 = 0.
+\bm{x}_\mathrm{AP} = \Big[x_0 = 0, \dot{x}_0 = 0, \varphi_1 = 0, \dot{\varphi}_1 = 0, \varphi_2 = 0,\dot{\varphi}_2 = 0 \Big]^\mathrm{T} \hspace{0.1cm} \text{ und } \hspace{0.1cm} u_{\mathrm{AP}} = 0.
 \end{align*}
 
 
@@ -113,11 +113,11 @@ mit
 %
 \begin{align}
 \label{eq:J1Ges}
-J_\mathrm{1,ges} = (\tfrac{1}{3} m_1 + m_2 +m_3) l_1^2 \hspace{0.25cm} \text{und}  \hspace{0.25cm}
+J_\mathrm{1,ges} = \left(\tfrac{1}{3} m_1 + m_2 +m_3\right) l_1^2 \hspace{0.25cm} \text{und}  \hspace{0.25cm}
 J_\mathrm{2,ges} = \tfrac{1}{3} m_2 l_2^2 	\nonumber.
 \end{align}
 
-Nach einer Entkopplung der Winkelbeschleunigungsterme in~\eqref{eq:ddphi1Lin} und~\eqref{eq:ddphi2Lin} ist das Aufstellen der Systemmatrix $ \bm{A} $, des Steuervektors $ \bm{b} $ und der Beobachtungsmatrix $ \bm{C} $ möglich. Es ergeben sich für die Matrizen folgende Formen
+Nach einer Entkopplung der Winkelbeschleunigungsterme in~\eqref{eq:ddphi1Lin} und~\eqref{eq:ddphi2Lin} ist das Aufstellen der Systemmatrix $ \bm{A} $, des Steuervektors $ \bm{b} $ und der Beobachtungsmatrix $ \bm{C} $ möglich. Für die Wahl der Ausgangsgrößen eignen sich die messbaren Größen des mechatronischen Systems. Diese sind die Wagenposition $ x(t) $ und der innere Pendelwinkel $ \varphi_1(t) $, welche in~\eqref{eq:ausgangsgleichung} gebildet werden. Es ergeben sich für die Matrizen:
 %
 \begin{align*}
 \bm{A} = \begin{bmatrix}
@@ -128,7 +128,7 @@ Nach einer Entkopplung der Winkelbeschleunigungsterme in~\eqref{eq:ddphi1Lin} un
 0 & 0 & 0 & 0 & 0 & 1 \\
 0 & 0 & a_{63} & a_{64} & a_{65} & a_{66}  
 \end{bmatrix},
-\bm{B} =
+\bm{b} =
 \begin{bmatrix}
 0 \\ 1 \\ 0 \\ b_4 \\ 0 \\b_6
 \end{bmatrix} \text{ und } \hspace{0.1cm}
@@ -139,7 +139,7 @@ Nach einer Entkopplung der Winkelbeschleunigungsterme in~\eqref{eq:ddphi1Lin} un
 \end{bmatrix}.
 \end{align*}
 
-Die einzelnen Einträge der Matrizen lauten
+Die einzelnen Einträge lauten
 %
 \begin{equation*}
 \setlength{\jot}{12pt}
@@ -177,16 +177,15 @@ Damit ist die zeitkontinuierliche Zustandsraumdarstellung vollständig gebildet. 
 \section{Steuerbarkeit}
 \label{sec:steuerbarkeit}
 
-Bevor die hier angewendete Optimalregelung erläutert wird, wird die grundsätzliche Eigenschaften der \textit{vollständigen Steuerbarkeit} eingeführt. Die in diesem Abschnitt dargestellten Zusammenhänge sind angelehnt an~\cite{Lunze2010}. 
-
-Es ist für eine beliebige Regelungsaufgabe zu klären, ob mithilfe der Eingangsgröße $ u(t) $ die Zustände von einem beliebigen Anfangszustand $ \bm{x}_0 $ in einen gewünschten Endzustand $ \bm{x}_\mathrm{e} $ überführt werden können. Ist diese Bedingung erfüllt, nennt man das System \textit{vollständig steuerbar}. Es gibt diverse Ansätze die Steuerbarkeit eines Systems zu überprüfen, wobei im Rahmen dieser Arbeit das Steuerbarkeitskriterium von \textit{Kalman} herangezogen wird. Der Vorteil dieses Kriteriums ist der einfache Nachweis. Es genügt eine Untersuchung der \mbox{$(n\times~n)$-Steuerbarkeitsmatrix} bestehend aus der Systemmatrix und dem Steuervektor:
+Bevor die hier angewendete Optimalregelung erläutert wird, wird die grundsätzliche Eigenschaften der \textit{vollständigen Steuerbarkeit} eingeführt. Die in diesem Abschnitt dargestellten Zusammenhänge sind angelehnt an~\cite{Lunze2010}. \\\\
+Es ist für eine beliebige Regelungsaufgabe zu klären, ob mithilfe der Eingangsgröße $ u(t) $ die Zustände von einem beliebigen Anfangszustand $ \bm{x}_0 $ in einen gewünschten Endzustand $ \bm{x}_\mathrm{e} $ überführt werden können. Ist diese Bedingung erfüllt, nennt man das System \textit{vollständig steuerbar}.  Es gibt diverse Ansätze die Steuerbarkeit eines Systems zu überprüfen, wobei im Rahmen dieser Arbeit das Steuerbarkeitskriterium von \textit{Kalman} herangezogen wird. Der Vorteil dieses Kriteriums ist der einfache Nachweis. Es genügt eine Untersuchung der \mbox{$(n\times~n)$-Steuerbarkeitsmatrix} bestehend aus der Systemmatrix und dem Steuervektor:
 %
 \begin{align}
 \label{eq:steuerbarkeitsmatrix}
-\bm{S}_\mathrm{S} = (\bm{b} \hspace{0.25cm} \bm{Ab} \hspace{0.25cm} \bm{A^2b} \hspace{0.25cm} ... \hspace{0.25cm} \bm{A^{n-1}b} ).
+\bm{S}_\mathrm{S} = \big(\bm{b} \hspace{0.25cm} \bm{Ab} \hspace{0.25cm} \bm{A}^2\bm{b} \hspace{0.25cm} ... \hspace{0.25cm} \bm{A}^{n-1}\bm{b} \big).
 \end{align}
 
-Für die \textit{vollständige Steuerbarkeit} des Systems muss $ \bm{S}_\mathrm{S} $ den vollen Rang $ \mathrm{rang}(\bm{S}_\mathrm{S}) = n = \mathrm{dim}(\bm{x}) $ aufweisen. Eine quadratische Matrix besitzt genau dann vollen Rang, wenn die Determinante der Matrix ungleich null ist. Mit der in Abschnitt~\ref{sec:zustandsraumdarstellung} aufgestellten Systemmatrix  $ \bm{A} $ und dem Steuervektor $ \bm{b} $ wird die \textit{vollständige Steuerbarkeit} nachgewiesen:
+Für die \textit{vollständige Steuerbarkeit} des Systems muss die Steuerbarkeitsmatrix den vollen Rang \mbox{$ \mathrm{rang}(\bm{S}_\mathrm{S}) = \mathrm{dim}(\bm{x}) = n $} aufweisen. Eine quadratische Matrix besitzt genau dann vollen Rang, wenn die Determinante der Matrix ungleich null ist. Mit der in Abschnitt~\ref{sec:zustandsraumdarstellung} aufgestellten Systemmatrix  $ \bm{A} $ und dem Steuervektor $ \bm{b} $ wird die \textit{vollständige Steuerbarkeit} nachgewiesen:
 %
 \begin{align*}
 \text{det}(\bm{S}_\mathrm{S}) = \left|
@@ -201,19 +200,19 @@ Für die \textit{vollständige Steuerbarkeit} des Systems muss $ \bm{S}_\mathrm{S}
 \right| = \small{ -7.0768\cdot 10^{14} \neq 0}
 \end{align*}
 
-Folglich lässt sich das Doppelpendel mithilfe der Eingangsgröße $ \ddot{x} $ aus einem beliebigen Anfangszustand $ \bm{x}_0 $ in einen Endzustand $ \bm{x}_\mathrm{e} $ überführen. Das bedeutet, dass die Zustandsregelung in die obere Gleichgewichtslage möglich ist. 
+Folglich lässt sich das Doppelpendel mithilfe der Eingangsgröße $ \ddot{x}(t) $ aus einem beliebigen Anfangszustand $ \bm{x}_0 $ in einen Endzustand $ \bm{x}_\mathrm{e} $ überführen. Das bedeutet, dass die Zustandsregelung in die obere Gleichgewichtslage für das linearisierte Modell theoretisch möglich ist. 
 
 \section{Zustandsregelung mittels LQ-Regelung}
 \label{sec:lqr}
 
-In diesem Abschnitt wird die Zustandsregelung mithilfe der optimalen LQ-Regelung dargestellt. Im Gegensatz zur PID-Regelung wird bei der Zustandsregelung nicht die Ausgangsgröße zurückgeführt sondern die Systemzustände. Die allgemeine Zustandsrückführung bei einer skalaren Eingangsgröße lautet
+In diesem Abschnitt wird die Zustandsregelung mithilfe der optimalen \textit{Linear-Quadratischen-Regelung} (LQ-Regelung) dargestellt. Im Gegensatz zur PID-Regelung wird bei der Zustandsregelung nicht die Ausgangsgröße zurückgeführt sondern die Systemzustände. Die allgemeine Zustandsrückführung bei einer skalaren Eingangsgröße lautet
 %
 \begin{equation}
 	u(t) = -\bm{k}^\mathrm{T}\bm{x(t)} + V w(t), 
 	\label{eq:zustandsrückführung}
 \end{equation}
 
-wobei $ \bm{k}^{\mathrm{T}} \in\mathds{R}^n $ der Rückführvektor ist und der zweite Summand für eine Führungsregelung benötigt wird. Es sind $ V $ ein Vorfilter und $ w(t) $ die Führungsgröße. Im Fall der Stabilisierung des Doppelpendels ist keine Führungsgröße vorhanden, stattdessen wird das Pendel aus einem ausgelenkten Zustand $ \bm{x}_0 $ in den Arbeitspunkt~\eqref{eq:arbeitspunkt} geregelt. Hierfür genügt es für die Untersuchung der Regelkreisdynamik den ersten Summanden der Zustandsrückführung~\eqref{eq:zustandsrückführung} zu betrachten. Mithilfe der Gleichung~\eqref{eq:zustandsrückführung} lässt sich der Signalflussplan, wie in Bild~\ref{fig:zustandsrückführung} zu sehen, ableiten. Unter Berücksichtigung der Eingangsgröße von~\eqref{eq:zustandsrückführung} ergibt sich das folgende System:
+wobei $ \bm{k} \in\mathds{R}^n $ der Rückführvektor ist und der zweite Summand für eine Führungsregelung benötigt wird. Es sind $ V $ ein Vorfilter und $ w(t) $ die Führungsgröße. In Bild~\ref{fig:zustandsrückführung} ist der allgemeine Signalflussplan der Zustandsrückführung abgebildet. Im Fall der Stabilisierung des Doppelpendels ist keine Führungsgröße vorhanden, stattdessen wird das Pendel aus einem ausgelenkten Zustand $ \bm{x}_0 $ in den Arbeitspunkt~\eqref{eq:arbeitspunkt} geregelt. Hierfür genügt es für die Untersuchung der Regelkreisdynamik den ersten Summanden von~\eqref{eq:zustandsrückführung} zu betrachten. Es ergibt sich das folgende System:
 %
 \begin{align}
 \begin{split}
@@ -227,7 +226,7 @@ wobei $ \bm{k}^{\mathrm{T}} \in\mathds{R}^n $ der Rückführvektor ist und der zwe
 \end{split}
 \end{align}
 
-\begin{figure}[!b] % signalflussplan zustandsraum
+\begin{figure}[!t] % signalflussplan zustandsraum
 	\begin{center}
 		\begin{tikzpicture}[node distance=1.3cm]
 		% nodes
@@ -275,20 +274,22 @@ wobei $ \bm{k}^{\mathrm{T}} \in\mathds{R}^n $ der Rückführvektor ist und der zwe
 	\label{fig:zustandsrückführung}
 \end{figure}
 
-Hierbei ist $ \bm{\tilde{A}} $ die Systemmatrix des geschlossenen Kreises mit Zustandsrückführung. Die Eigenwerte der Regelstrecke, welche über eine Untersuchung der Systemmatrix $ \bm{A} $ berechnet werden können, beschreiben die Dynamik der Regelstrecke. Es ist direkt ersichtlich, dass der Rückführvektor $ \bm{k}^\mathrm{T} $ einen Einfluss auf die Eigenwerte des geschlossenen Kreises hat. Somit ist es möglich, die geschlossene Systemdynamik über die Einträge des Rückführvektors zu beeinflussen. Zwei häufig verwendete Methoden der Reglerauslegung stellen die \textit{Polvorgabe} und die \textit{Linear-Quadratische-Regelung }(LQ-Regelung) dar. Die hier dargestellten Aufführungen beziehen sich auf~\cite{Lunze2010}.
+Hierbei ist $ \bm{\tilde{A}} $ die Systemmatrix des geschlossenen Kreises mit Zustandsrückführung. 
+%Die Eigenwerte des offenen Kreises, welche über eine Untersuchung der Systemmatrix $ \bm{A} $ berechnet werden können, beschreiben die Dynamik der Regelstrecke. 
+Es ist direkt ersichtlich, dass der Rückführvektor $ \bm{k}^\mathrm{T} $ einen Einfluss auf die Eigenwerte des geschlossenen Kreises hat. Somit ist es möglich, die geschlossene Systemdynamik über die Einträge des Rückführvektors zu beeinflussen. Zwei häufig verwendete Methoden der Reglerauslegung stellen die \textit{Polvorgabe} und die LQ-Regelung dar. Die hier dargestellten Aufführungen beziehen sich auf Kapitel 7 in~\cite{Lunze2010}.
 
-Bei der ersten Methode wird die Systemdynamik des geschlossenen Kreises über die Wahl bestimmter Pole der Übertragungsfunktion, welche das Ein- und Ausgangsverhalten des Systems beschreibt, vorgegeben. Hierbei werden die Pole in der komplexen Ebene platziert, wobei diese bestimmte Eigenschaften erfüllen sollten. Unter anderem muss die Reglerdynamik höher als die der Strecke sein. Das bedeutet, dass die vorgegebenen Pole betragsmäßig fünf bis sechs Mal so weit links in der komplexen Ebene als die der Regelstrecke liegen sollten. Jedoch wird durch eine härtere Auslegung des Reglers unerwünschtes Messrauschen zusätzlich verstärkt. 
+Bei der ersten Methode wird die Systemdynamik des geschlossenen Kreises über die Wahl bestimmter Pole der Übertragungsfunktion, welche das Ein- und Ausgangsverhalten des Systems beschreibt, vorgegeben. Hierbei werden die Pole in der komplexen Ebene platziert, wobei diese bestimmte Eigenschaften erfüllen sollten. Unter anderem muss die Reglerdynamik höher als die der Strecke sein. Dafür werden die vorgegebenen Pole betragsmäßig fünf bis sechs Mal größer als die der Regelstrecke ausgelegt und in der komplexen Ebene links platziert. Jedoch wird durch eine härtere Auslegung des Reglers unerwünschtes Messrauschen zusätzlich verstärkt. 
 
-Bei der LQ-Regelung wird auf die Pole des geschlossenen Kreises auch Einfluss genommen, jedoch geschieht dies auf indirekte Art und Weise. Die LQ-Regelung gehört zur Gruppe der optimalen Regelungsverfahren. Über die Definition eines Gütefunktionals, welches die Stell- und Regelgrößen bewertet, kann die Regelungsaufgabe in ein Optimierungsproblem überführt werden. Die gleichzeitige Berücksichtigung der Stell- und Regelgrößen ist einen Vorteil der optimalen Regelung gegenüber der Polzuweisung. Besonders in Hinblick auf das reale Pendel mit geringem Verfahrweg ist die Beschränkung von $ \pm x_{\mathrm{max}} $ hilfreich, vgl. \cite{Behm2016}. Aus diesem Grund wird im Rahmen dieser Arbeit die LQ-Regelung für die Stabilisierung des Doppelpendels verwendet und im folgenden näher beleuchtet. 
+Bei der LQ-Regelung wird auf die Pole des geschlossenen Kreises auch Einfluss genommen, jedoch geschieht dies auf indirekte Art und Weise. Die LQ-Regelung gehört zur Gruppe der optimalen Regelungsverfahren. Über die Definition eines Gütefunktionals, welches die Stell- und Regelgrößen bewertet, kann die Regelungsaufgabe in ein Optimierungsproblem überführt werden. Die gleichzeitige Berücksichtigung der Stell- und Regelgrößen ist ein Vorteil der optimalen Regelung gegenüber der Polzuweisung. Besonders in Hinblick auf das reale Doppelpendel mit geringem Verfahrweg ist die Beschränkung des maximalen \mbox{Verfahrwegs $ \pm x_{\mathrm{max}}$} hilfreich, vgl. \cite{Behm2016}. Aus diesem Grund wird in dieser Arbeit die LQ-Regelung für die Stabilisierung des Doppelpendels verwendet und im folgenden näher beleuchtet. 
 
 Das Gütefunktional eines zeitinvarianten Reglers mit unendlichem Zeithorizont lautet
 %
 \begin{equation}
-	J = \int^{\infty}_0 (\bm{x}^\mathrm{T}(t)\bm{Q}_{\mathrm{LQ}}\bm{x}(t) + u(t) \bm{R}_{\mathrm{LQ}} u(t)) \hspace{0.1cm} \text{d}t,
+	J = \int^{\infty}_0 (\bm{x}^\mathrm{T}(t)\bm{Q}_{\mathrm{LQ}}\bm{x}(t) + u(t) R_{\mathrm{LQ}} u(t)) \hspace{0.1cm} \text{d}t,
 	\label{eq:gütefunktion}
 \end{equation}
 
-wobei $ \bm{Q}_{\mathrm{LQ}} $ und $ \bm{R}_{\mathrm{LQ}} $ Wichtungsmatrizen darstellen. Die Einstellregeln der Wichtungsmatrizen werden später in diesem Abschnitt behandelt. Es wird für die Lösung des Optimierungsproblems vorausgesetzt, dass beide Matrizen positiv definit sind, sodass das Paar $ (\bm{A}, \tilde{\bm{Q}}_{\mathrm{LQ}}) $ vollständig beobachtbar ist. Die Matrix $ \tilde{\bm{Q}}_{\mathrm{LQ}} $
+wobei $ \bm{Q}_{\mathrm{LQ}} $ die Wichtungsmatrix des Zustandsvektors $ \bm{x}(t) $ und $ R_{\mathrm{LQ}} $ der Wichtungsfaktor der Eingangsgröße sind. Die Einstellregeln der Wichtungen werden später in diesem Abschnitt behandelt. Es wird für die Lösung des Optimierungsproblems vorausgesetzt, dass beide Matrizen positiv definit sind, sodass das Paar $ (\bm{A}, \tilde{\bm{Q}}_{\mathrm{LQ}}) $ vollständig beobachtbar ist. Die Matrix $ \tilde{\bm{Q}}_{\mathrm{LQ}} $
 ergibt sich aus der Zerlegung
 %
 \begin{equation*}
@@ -310,52 +311,52 @@ mittels der Zustandsrückführung
 mit
 %
 \begin{equation}
-	\bm{k}^\mathrm{T}_\mathrm{opt} = \bm{R}_{\mathrm{LQ}}^{-1}\bm{b}^\mathrm{T} \bm{P}
+	\bm{k}^\mathrm{T}_\mathrm{opt} = R_{\mathrm{LQ}}^{-1} \bm{b}^\mathrm{T} \bm{P}
 	\label{eq:kOpt}
 \end{equation}
 
 lösen. Hierbei ist $ \bm{P} $ die symmetrische, positiv definite Lösung der Matrix-Ricattigleichung
 %
 \begin{equation}
-\bm{A}^\mathrm{T} \bm{P} + \bm{P} \bm{A} - \bm{P} \bm{b} \bm{R}_{\mathrm{LQ}}^{-1}\bm{b}^\mathrm{T}\bm{P} +\bm{Q}_{\mathrm{LQ}}
+\bm{A}^\mathrm{T} \bm{P} + \bm{P} \bm{A} - \bm{P} \bm{b} R_{\mathrm{LQ}}^{-1}\bm{b}^\mathrm{T}\bm{P} +\bm{Q}_{\mathrm{LQ}}
 =  \bm{0}.
 \label{eq:matrixricatti}
 \end{equation}
 
 Eine genau Herleitung und Lösung der Matrix-Ricattigleichung wird an dieser Stelle nicht aufgeführt. 
 
-Nun wird die Reglerauslegung betrachtet, welche in erster Linie über die Wichtungsmatrizen $ \bm{Q}_{\mathrm{LQ}} \text{ und } \bm{R}_{\mathrm{LQ}} $ bewerkstelligt wird. Eine Methode für die Wahl der Wichtungseinträge ist in~\cite{Luo1995} dargestellt. Anstatt die Einträge iterativ zu bestimmen, werden nur die Diagonaleinträge der Matrizen mit positiven Werten besetzt, wodurch die Bedingung der positiven Definitheit erfüllt ist. Die Diagonaleinträge werden in Abhängigkeit der realen, maximal zulässigen Zustands- bzw. Eingangswerte gewählt und lauten
+Nun wird die Reglerauslegung betrachtet, welche in erster Linie über die Wichtungen $ \bm{Q}_{\mathrm{LQ}}$ und $ R_{\mathrm{LQ}} $ bewerkstelligt wird. Eine Methode für die Wahl der Wichtungseinträge ist in~\cite{Luo1995} dargestellt. Es werden nur die Diagonaleinträge der Matrizen mit positiven Werten besetzt, wodurch die Bedingung der positiven Definitheit erfüllt ist. Die Diagonaleinträge werden in Abhängigkeit der realen, maximal zulässigen Zustands- bzw. Eingangswerte gewählt und lauten
 %
 \begin{align}
-q_{ii} &= 1/x_{i,\text{max}}^2, \hspace{1cm} &q_{ij} = 0, \text{ für } i\neq j, \nonumber \\
-r_{ii} &= 1/u_{i,\text{max}}^2, \hspace{1cm} &r_{ij} = 0, \text{ für } i\neq j.
+q_{ii} &= 1/x_{i,\mathrm{max}}^2,  \nonumber\\
+q_{ij} &= 0 ~\text{ für } i\neq j, \nonumber \\
+R_{\mathrm{LQ}} &= 1/u_{\mathrm{max}}^2.
 \label{eq:lqrWichtungen}
 \end{align}
 
-Somit ist das zu minimierende Gütefunktional~\eqref{eq:gütefunktion} an die limitierenden Faktoren des untersuchten Systems geknüpft. In Anlehnung an das reale Doppelpendel ergeben sich die Wichtungseinträge, die in der Tabelle~\ref{tab:lqr} zu sehen sind. Über die Wahl der Wichtungseinträge von $ \bm{Q}_{\mathrm{LQ}} \text{ und } \bm{R}_{\mathrm{LQ}} $ lassen sich die Zustände und Stellgrößen bewerten. 
+Bei Anwendung von~\eqref{eq:lqrWichtungen} erfolgt eine Normierung der Wichtungen hinsichtlich der physikalischen Einheiten im quadratischen Gütefunktional~\eqref{eq:gütefunktion}. Außerdem ist das zu minimierende Gütefunktional an die limitierenden Faktoren des untersuchten Systems geknüpft. In Anlehnung an das reale Doppelpendel ergeben sich die Wichtungseinträge, die in der Tabelle~\ref{tab:lqr} zu sehen sind. Über die Wahl der Wichtungseinträge von $ \bm{Q}_{\mathrm{LQ}} \text{ und } R_{\mathrm{LQ}} $ lassen sich die Zustände und Stellgrößen bewerten. 
 
-Einerseits bedeuten hohe Einträge, dass die jeweiligen Zustände und Stellgrößen im Rahmen einer Minimierung von~\eqref{eq:gütefunktion} stark bestraft werden. Eine starke Bestrafung impliziert, dass die jeweiligen Größen gering gehalten werden. In diesem Zusammenhang ist vor allem der geringe Verfahrweg des Doppelpendels zu nennen. Eine Überschreitung des Verfahrwegs soll in jedem Fall unterbunden werden, weshalb dieser Wichtungseintrag nach~\eqref{eq:lqrWichtungen} im Vergleich zu den anderen Größen hoch ausfällt.
+Einerseits bedeuten hohe Wichtungen, dass die jeweiligen Zustände und Stellgrößen im Rahmen einer Minimierung von~\eqref{eq:gütefunktion} stark bestraft werden. Eine starke Bestrafung impliziert, dass die jeweiligen Größen bei der Regelung gering gehalten werden. In diesem Zusammenhang ist vor allem der geringe Verfahrweg des Doppelpendels zu nennen. Eine Überschreitung des Verfahrwegs soll in jedem Fall unterbunden werden, weshalb dieser Wichtungseintrag nach~\eqref{eq:lqrWichtungen} im Vergleich zu den anderen Größen hoch ausfällt.
 \begin{table}[!b]
 	\centering
 	\caption{Einträge der Wichtungsmatrizen $ \bm{Q}_{\mathrm{LQ}} \text{ und } \bm{R}_{\mathrm{LQ}} $ der Zustandsregelung}
 	\label{tab:lqr}
 	\begin{tabu}{clll}
 		\tabucline[2pt]{-}
-		Variable & Wert \& Einheit & Beschreibung & Wichtungseintrag \\\tabucline[1pt]{-}
-		$ x_\mathrm{max} $ 		& \SI{0,2}{m}		& Verfahrweg in pos. und neg. Richtung & \SI{25}{m^{-2}}\\
-		$ \dot{x}_\mathrm{max} $& \SI{5}{m.s^{-1}}  & maximale Verfahrgeschwindigkeit 	& \SI{0,04}{s^2.m^{-2}} \\
-		$ \varphi_{1,\mathrm{max}} $& \ang{20} = \SI{0,349}{\radian}  & Winkelabweichung vom Arbeitspunkt &    \SI{8,207}{\radian^{-2}} \\
-		$ \dot{\varphi}_{1,\mathrm{max}} $& \SI{100}{\radian s^{-1}}  & maximale Winkelgeschwindigkeit & \SI{1e-4}{s^2\radian^{-2}}   \\
-		$ \varphi_{2,\mathrm{max}} $& \ang{20} = \SI{0,349}{\radian}  & Winkelabweichung vom Arbeitspunkt & \SI{8,207}{\radian^{-2}} \\
-		$ \dot{\varphi}_{2,\mathrm{max}} $& \SI{100}{\radian s^{-1}}  & Maximale Winkelgeschwindigkeit & \SI{1e-4}{s^2\radian^{-2}}   \\
-		$u_\mathrm{max} $& \SI{20}{m.s^{-2}} & Maximale Wagenbeschleunigung &  \SI{2,5e-3}{s^4.m^{-2}}  \\ \hline
+		Variable & Größe & Beschreibung & Wichtungseintrag \\\tabucline[1pt]{-}
+		$ x_\mathrm{max} $ 		& \SI{0,2}{m}		& Verfahrweg in pos. und neg. Richtung & $ q_{11}=\SI{25}{m^{-2}}$\\
+		$ \dot{x}_\mathrm{max} $& \SI{5}{m.s^{-1}}  & maximale Verfahrgeschwindigkeit 	& $ q_{22}=\SI{0,04}{s^2.m^{-2}} $ \\
+		$ \varphi_{1,\mathrm{max}} $& \SI{0,349}{\radian}  & Winkelabweichung vom Arbeitspunkt &    $ q_{33}=\SI{8,207}{\radian^{-2}} $ \\
+		$ \dot{\varphi}_{1,\mathrm{max}} $& \SI{100}{\radian s^{-1}}  & maximale Winkelgeschwindigkeit & $ q_{44}=\SI{1e-4}{s^2\radian^{-2}} $   \\
+		$ \varphi_{2,\mathrm{max}} $& \SI{0,349}{\radian}  & Winkelabweichung vom Arbeitspunkt & $ q_{55}=\SI{8,207}{\radian^{-2}} $ \\
+		$ \dot{\varphi}_{2,\mathrm{max}} $& \SI{100}{\radian s^{-1}}  & Maximale Winkelgeschwindigkeit & $ q_{66}=\SI{1e-4}{s^2\radian^{-2}} $   \\
+		$u_\mathrm{max} $& \SI{20}{m.s^{-2}} & Maximale Wagenbeschleunigung &  $ R_{\mathrm{LQ}}=\SI{2,5e-3}{s^4.m^{-2}} $  \\ \hline
 	\end{tabu}
 \end{table}
-Andererseits werden mit kleinen Wichtungseinträgen die Zustände und Stellgrößen weniger stark bestraft. Das heißt, es werden auch sehr hohe Werte für diese Größen akzeptiert. Hier stechen vor allem die Winkelgeschwindigkeiten der Pendelstäbe hervor. Mit einer geringen Bestrafung der Winkelgeschwindigkeiten werden schnelle Bewegungen des Doppelpendels akzeptiert, was hilfreich für die Stabilisierung des Doppelpendels ist.
 
+Andererseits werden mit kleinen Wichtungseinträgen die Zustände und Stellgrößen weniger stark bestraft. Das heißt, es werden auch hohe Werte während der Regelung für diese Größen akzeptiert. Hier stechen vor allem die Winkelgeschwindigkeiten der Pendelstäbe hervor. Mit einer geringen Bestrafung der Winkelgeschwindigkeiten werden schnelle Bewegungen des Doppelpendels akzeptiert, was hilfreich für die Stabilisierung des Doppelpendels ist.
 
-
-Damit kann die Zustandsregelung mittels LQR vollzogen werden und das Minimierungsproblems~\eqref{eq:gütefunktion} gelöst werden. Es ergibt sich der optimale Rückführvektor
+Damit kann die Zustandsregelung mittels der LQ-Regelung vollzogen werden. Das Minimierungsproblem~\eqref{eq:gütefunktion} wird mit dem optimalen Rückführvektor
 %
 \begin{equation*}
 	\begin{aligned}
@@ -370,24 +371,20 @@ Damit kann die Zustandsregelung mittels LQR vollzogen werden und das Minimierung
 	\end{aligned}.
 \end{equation*} 
 
-
-
-
-
-Für die Regelung in die obere, instabile Gleichgewichtslage wird der Anfangszustand
+gelöst. Für die Regelung in die obere, instabile Gleichgewichtslage wird der Anfangszustand
 %
 \begin{equation*}
 	\bm{x}_0 = \Big[x_0 = 0, \dot{x}_0 = 0, \varphi_{1,0} = \ang{-4}, \dot{\varphi}_{1,0} = 0, \varphi_{2,0} = \ang{-5}, \dot{\varphi}_{2,0} = 0\Big]^\mathrm{T}
 \end{equation*}
 
-gewählt. Davon ausgehend wird das Doppelpendel sowie der Wagen in den Nullzustand geregelt. Das Simulationsergebnis ist in Bild~\ref{fig:lqr} dargestellt. Es ist zu sehen, dass bei der relativ kleinen Anfangsauslenkung von 4 bis \ang{5} bereits ein Großteil des maximalen Verfahrwegs von \SI{20}{cm} ausgenutzt wird. Eine weitere Entfernung der Startwinkel vom Arbeitspunkt führt zu Instabilität. Es ist anzumerken, dass die in der Simulation verwendeten Massenträgheiten der Pendel, welche einen erheblichen Einfluss auf die Stabilität des Systems haben, relativ gering sind. Dies ist auf die Tatsache zurückzuführen, dass die realen Pendelstäbe aus Aluminium, welches eine geringere Dichte als z.B. Eisen besitzt, bestehen. Werden Pendelstäbe aus Eisen mit den Massen $ m_1 = m_2 = \SI{0,1341}{kg} $ verwendet, lässt sich das Doppelpendel mit einer Anfangsauslenkung von über \ang{10} noch in die obere Gleichgewichtslage regeln. Das liegt an den damit verbundenen größeren Massenträgheitsmomenten der Pendel gemäß~\eqref{eq:massentraegheitsmoment}, die das System träger werden lassen. 
+gewählt. Davon ausgehend wird das Doppelpendel sowie der Wagen in den Nullzustand geregelt. Das Simulationsergebnis ist in Bild~\ref{fig:lqr} dargestellt. Es ist zu sehen, dass bei der relativ kleinen Anfangsauslenkung von 4 bis \ang{5} bereits \SI{13}{cm} des Verfahrwegs ausgenutzt werden. Eine weitere Entfernung der Startwinkel vom Arbeitspunkt führt zu Instabilität. Es ist anzumerken, dass die in der Simulation verwendeten Massenträgheiten der Pendel, welche einen erheblichen Einfluss auf die Stabilität des Systems haben, relativ gering sind. Dies ist auf die Tatsache zurückzuführen, dass die realen Pendelstäbe aus Aluminium, welches eine geringere Dichte als z.B. Eisen besitzt, bestehen. Werden Pendelstäbe aus Eisen mit den Massen $ m_1 = m_2 = \SI{0,1341}{kg} $ verwendet, lässt sich das Doppelpendel mit einer Anfangsauslenkung von über \ang{10} noch in die obere Gleichgewichtslage regeln. Das liegt an den damit verbundenen größeren Massenträgheitsmomenten der Pendelstäbe gemäß~\eqref{eq:massentraegheitsmoment}, die das System träger werden lassen. 
 
-Die hier durchgeführte Zustandsregelung setzt voraus, dass in jedem Zeitschritt die Zustände $ \bm{x} $ bekannt sind. In der Simulation lassen sich die Zustände über die Bewegungsgleichungen ermitteln, welche bei der Zustandsrückführung verwendet werden. In Realität liegt jedoch nur die Messung für den inneren Pendelwinkel $ \varphi_1(t) $ vor. Die Ermittlung des äußeren Pendelwinkels $ \varphi_2(t) $ kann mithilfe einer nichtlinearen Zustandsbeobachtung bewerkstelligt werden. Die nichtlineare Zustandsbeobachtung ist Gegenstand des folgenden Kapitels.
+Die hier durchgeführte Zustandsregelung setzt voraus, dass in jedem Zeitschritt die Zustände $ \bm{x} $ bekannt sind. In der Simulation lassen sich die Zustände, welche bei der Zustandsrückführung verwendet werden, über die Bewegungsgleichungen  ermitteln. In Realität liegt jedoch nur die Messung für den inneren Pendelwinkel $ \varphi_1(t) $ vor. Die Ermittlung des äußeren Pendelwinkels $ \varphi_2(t) $ kann mithilfe einer nichtlinearen Zustandsbeobachtung bewerkstelligt werden. Die nichtlineare Zustandsbeobachtung in der Simulation ist Gegenstand des folgenden Kapitels.
 
 \begin{figure}[!ht]
 	\centering
 	\input{plots/lqr.tex}
-	\caption{Zustandsregelung mittels LQR des Doppelpendels}
+	\caption[Zustandsregelung des Doppelpendels mittels LQ-Rgelung]{Zustandsregelung des Doppelpendels mittels LQ-Regelung: Wagenposition (oben), Pendelwinkel (unten)}
 	\label{fig:lqr}
 \end{figure}
 
