--- a/Latex Nichtlineare Zustandsbeobachtung/literaturserov.bib
+++ b/Latex Nichtlineare Zustandsbeobachtung/literaturserov.bib
@@ -49,16 +49,78 @@
 
 @Book{Ortmaier2015,
   title     = {Skript zur Vorlesung Mechatronische Systeme},
-  publisher = {Fakultät für Maschinenbau der Gottfried Wilhelm Leibniz Universität Institut für Mechatronische Systeme (imes), Institut für Mikroproduktionstechnik (IMPT)},
+  publisher = {Fakultät für Maschinenbau der Gottfried Wilhelm Leibniz Universität, Institut für Mechatronische Systeme (imes), Institut für Mikroproduktionstechnik (IMPT)},
   year      = {2015},
-  author    = {Tobias Ortmaier, Christian Hansen, Steffen Bosselmann, Lutz Rissing, Mathias Rechel, Daniel Klaas},
+  author    = {Ortmaier, Tobias and Hansen, Christian and Bosselmann, Steffen and Rissing, Lutz and Rechel, Mathias and Klaas, Daniel},
 }
 
 @Article{Welch2006,
-  author  = {Greg Welch, Gary Bishop},
+  author  = {Welch, Greg and Bishop, Gary},
   title   = {An Introduction to the Kalman Filter},
   journal = {Department of Computer Science University of North Carolina at Chapel Hill},
   year    = {2006},
+}
+
+@Book{Ortmaier2016,
+  title     = {Skript zur Vorlesung Robotik II},
+  publisher = {Fakultät für Maschinenbau der Gottfried Wilhelm Leibniz Universität, Institut für Mechatronische Systeme (imes)},
+  year      = {2016},
+  author    = {Ortmaier, Tobias and Tappe, Svenja},
+}
+
+@InProceedings{Wan,
+  author    = {E.A. Wan and R. Van Der Merwe},
+  title     = {The unscented Kalman filter for nonlinear estimation},
+  booktitle = {Proceedings of the {IEEE} 2000 Adaptive Systems for Signal Processing, Communications, and Control Symposium (Cat. No.00EX373)},
+  year      = {2000},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  doi       = {10.1109/asspcc.2000.882463},
+}
+
+@TechReport{Olejnik2013,
+  author      = {Olejnik, Pawel and Awrejcewicz, Jan and Nielaczny, Michal},
+  title       = {Solution of the Kalman filtering problem in control and modeling of a double inverted pendulum with rolling friction},
+  institution = {Department of Automation and Biomechanics, Lodz University of Technology},
+  year        = {2013},
+}
+
+@InProceedings{Hettich2014,
+  author = {Georg Hettich and Thomas Mergner and Luminous Fennell},
+  title  = {Double Inverted Pendulum Model of Reactive Human Stance Control},
+  year   = {2014},
+}
+
+@InProceedings{Samani2010,
+  author    = {Alireza Ghatreh Samani and Saeed Bagheri Shouraki and Reza Eghbali and Mohammad Ghomi Rostami},
+  title     = {Control of a Non Observable Double Inverted Pendulum Using a Novel Active Learning Method Based State Estimator},
+  booktitle = {2010 Fourth {UKSim} European Symposium on Computer Modeling and Simulation},
+  year      = {2010},
+  month     = {nov},
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  doi       = {10.1109/ems.2010.17},
+}
+
+@InProceedings{Merwe2004,
+  author    = {Rudolph van der Merwe and Eric Wan and Simon Julier},
+  title     = {Sigma-Point Kalman Filters for Nonlinear Estimation and Sensor-Fusion: Applications to Integrated Navigation},
+  booktitle = {{AIAA} Guidance, Navigation, and Control Conference and Exhibit},
+  year      = {2004},
+  month     = {aug},
+  publisher = {American Institute of Aeronautics and Astronautics ({AIAA})},
+  doi       = {10.2514/6.2004-5120},
+}
+
+@Article{Glueck2013,
+  author    = {Tobias Glück and Andreas Eder and Andreas Kugi},
+  title     = {Swing-up control of a triple pendulum on a cart with experimental validation},
+  journal   = {Automatica},
+  year      = {2013},
+  volume    = {49},
+  number    = {3},
+  pages     = {801--808},
+  month     = {mar},
+  doi       = {10.1016/j.automatica.2012.12.006},
+  publisher = {Elsevier {BV}},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
