--- a/Latex Nichtlineare Zustandsbeobachtung/plots/rueckwirkungpendelaufwagen.tex
+++ b/Latex Nichtlineare Zustandsbeobachtung/plots/rueckwirkungpendelaufwagen.tex
@@ -4,7 +4,7 @@
 %  http://www.mathworks.com/matlabcentral/fileexchange/22022-matlab2tikz-matlab2tikz
 %where you can also make suggestions and rate matlab2tikz.
 %
-\definecolor{mycolor1}{rgb}{0.00000,0.44700,0.74100}%
+%\definecolor{green}{rgb}{0.784313,0.82745,0.090196}%
 %
 \begin{tikzpicture}
 
@@ -23,7 +23,7 @@ ylabel style={font=\color{white!15!black}},
 ylabel={$\text{Relative Wagenbewegung [}\si{\micro\meter}\text{]}$},
 axis background/.style={fill=white}
 ]
-\addplot [color=mycolor1, line width=1.1pt, forget plot]
+\addplot [color=orange, line width=1.1pt, forget plot]
   table[row sep=crcr]{%
 0	-0.0600086262253378\\
 0.01	-0.0948013950802675\\
